# GoogleCity

./: .gitignore  CMakeLists.txt  City.cpp  City.h  CityUtils.cpp  CityUtils.h  DummyOptimization.cpp  DummyOptimization.h  Genetics.cpp  Genetics.h  GoogleCityAndrew.cpp  SimpleSimulation.cpp  Simulation.cpp  Simulation.h  main.cpp
working/: answer_a.txt  answer_b.txt  answer_c.txt  answer_d.txt  answer_e.txt  score.csv
